# QGIS-PKI-Test

./: CMakeLists.txt  README.rst  main.cpp  webpage.cpp  webpage.h  webpage.ui
cmake/: FindQCA2.cmake  qca2_use_frameworks.diff
